--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div id="main" class="mdl-layout mdl-js-layout mdl-layout--fixed-header mdl-layout--fixed-tabs">
+        <div id="main" class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
             <div class="shadow-loader"
                  v-show="startedLoading"
                  transition="fade">
