--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-        <title>Buckutt</title>
+        <title>Buckless</title>
         <meta charset="utf-8">
-        <meta name="description" content="Buckutt Client Application">
+        <meta name="description" content="Buckless Client Application">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
