--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <meta charset="utf-8">
     <title>buckless-client</title>
   </head>
   <body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <script src="/dist/app.js"></script>
   </body>
 </html>
