--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="utf-8">
-    <title>buckless-client</title>
-  </head>
-  <body>
-    <div id="app"></div>
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <title>Buckless Client</title>
+    </head>
+    <body>
+        <div id="app"></div>
+        <script type="text/javascript" src="app.js"></script>
+    </body>
 </html>
