feat: offline mode (#153)

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head lang="fr">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline' 'unsafe-eval'">
     <title>Buckless Client</title>
   </head>
   <body>
